<resources>
    <string name="app_name">Are We There Yet?</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="message">Message</string>
    <string name="phone">Phone</string>
    <string name="interval">Interval (m)</string>
    <string name="minutes">Minutes</string>
</resources>
